Style the navigation to be closer to mocks & fix spacing between enclosures.

--- a/resources/assets/components/FeedEnclosure/feed-enclosure.scss
+++ b/resources/assets/components/FeedEnclosure/feed-enclosure.scss
@@ -1,7 +1,7 @@
 @import '../../scss/next-toolbox';
 
 .feed-enclosure {
-  padding: ($base-spacing / 2) 0;
-
   @include clearfix;
+
+  margin: $base-spacing 0;
 }
